third_party/rust/proc-macro-hack/tests/ui/private.stderr
error: functions tagged with `#[proc_macro_hack]` must be `pub`
 --> tests/ui/private.rs:4:1
  |
4 | fn my_macro(input: TokenStream) -> TokenStream {
  | ^^
